--- a/src/pages/manifesto/style.scss
+++ b/src/pages/manifesto/style.scss
@@ -1,59 +1,250 @@
 @import '../../styles/main.scss';
+@import '../style.scss';
 
 .ManifestoPage {
-  &__cta,
-  &__references-title {
-    font-size: 32px;
-    font-weight: bold;
-    line-height: 1.3;
+  // --------------
+  // GENERAL STYLES
+  // --------------
+
+  &__section {
+    max-width: 606px;
+    margin: 0 auto;
   }
 
-  &__cta,
+  &__section-title {
+    @include section-title;
+
+    color: #ff3861;
+
+    &--white {
+      color: #e0e1ff;
+    }
+
+    &--blue {
+      color: $c_blue-ribbon;
+    }
+  }
+
+  &__title {
+    @include h2;
+
+    margin-top: 8px;
+    color: $c_white;
+
+    &--black {
+      color: $c_black;
+    }
+  }
+
+  &__subtitle {
+    @include h4;
+
+    margin-top: 48px;
+    color: $c_white;
+
+    &--black {
+      color: $c_black;
+    }
+  }
+
+  &__paragraph {
+    @include base-1;
+
+    margin-top: 24px;
+    line-height: 32px;
+    color: #a7aeb7;
+
+    &--top {
+      margin-top: 48px;
+    }
+
+    &--white {
+      color: $c_white;
+    }
+
+    &--black {
+      color: #1f252e;
+    }
+  }
+
+  &__text-highlight {
+    display: inline;
+    padding: .2rem;
+    color: $c_white;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+
+    &--red {
+      color: #fff;
+      background-color: rgba(255, 56, 97, .75);
+    }
+
+    &--white {
+      font-weight: 600;
+      color: $c_black;
+      background-color: rgba(255, 255, 255, .75);
+    }
+  }
+
+  // -----------------------
+  // SECTION SPECIFIC STYLES
+  // -----------------------
+
+  &__hero-wrapper {
+    position: relative;
+    padding-top: 96px;
+    background-color: $c_blue-ribbon;
+  }
+
+  &__hero-background-wrapper {
+    position: absolute;
+    bottom: -1px;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__hero-background {
+    position: absolute;
+    bottom: -1px;
+    display: flex;
+    width: 100%;
+    height: 160px;
+
+    &__left {
+      flex-grow: 1;
+
+      &__illustration {
+        width: 101%;
+      }
+    }
+
+    &__middle {
+      width: 185px;
+      height: 160px;
+      min-width: 185px;
+      min-height: 160px;
+    }
+
+    &__right {
+      flex-grow: 1;
+
+      &__illustration {
+        width: 100%;
+      }
+    }
+  }
+
+  &__hero {
+    @extend %container;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    &__header {
+      max-width: 606px;
+    }
+
+    &__title {
+      @include h1;
+
+      color: $c_white;
+      text-align: center;
+    }
+
+    &__subtitle {
+      @include base-1;
+
+      margin-top: 24px;
+      color: $c_white;
+      text-align: center;
+    }
+
+    &__illustration {
+      z-index: 1;
+      margin-top: 96px;
+      margin-bottom: -1px;
+    }
+  }
+
+  &__illustration-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 320px;
+    margin-top: 96px;
+    background-color: #dee3e9;
+  }
+
+  &__problem-wrapper {
+    padding: 96px 0;
+    background-color: $c_black;
+  }
+
+  &__problem {
+    &__paragraph-4 {
+      & > span {
+        font-weight: 600;
+        color: $c_white;
+      }
+    }
+  }
+
+  &__goal-wrapper {
+    padding: 96px 0;
+    background-color: $c_blue-ribbon;
+  }
+
+  &__thesis-wrapper {
+    padding: 96px 0;
+    background-color: #f2f5f9;
+  }
+
+  &__thesis {
+    @extend %container;
+  }
+
+  &__references-wrapper {
+    padding-bottom: 96px;
+    background-color: #f2f5f9;
+  }
+
   &__references {
-    margin-right: 10px;
-    margin-left: 10px;
-  }
+    max-width: 606px;
+    margin: 0 auto;
 
-  &__cta {
-    margin-bottom: 80px;
-  }
+    &__title {
+      @include h6;
+    }
 
-  &__references {
-    line-height: 1.5;
+    &__items {
+      display: flex;
+      flex-direction: column;
+      margin-top: 24px;
+      gap: 4px;
+    }
 
-    p {
-      margin-bottom: 1.1em;
+    &__item {
+      @include base-4;
+
+      color: #5c6475;
     }
   }
 
-  &__references-title {
-    margin-bottom: 40px;
+  @media (max-width: 2000px) {
+    &__hero-background__left__illustration {
+      width: 102%;
+    }
   }
-}
 
-@media #{$screen-md} {
-  .ManifestoPage {
-    &__grouped-sections {
-      margin-bottom: 150px;
-      padding-top: 100px;
-    }
-
-    &__cta,
-    &__references {
-      max-width: 1000px;
-    }
-
-    &__cta {
-      margin-bottom: 100px;
-    }
-
-    &__references-title {
-      margin-bottom: 60px;
-    }
-
-    &__cta,
-    &__references-title {
-      font-size: 36px;
+  @media #{$screen-max-lg} {
+    &__hero-background {
+      &__left {
+        &__illustration {
+          width: 103%;
+        }
+      }
     }
   }
 }
