Re-implement light navbar and add it to manifesto page, fix links to apps built on joystream section

--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -95,6 +95,14 @@
     &:hover {
       background-color: $c_han_purple;
     }
+
+    &--light {
+      background: $c_black;
+
+      &:hover {
+        background: $c_black;
+      }
+    }
   }
 
   &__button-text {
