--- a/src/pages/manifesto/style.scss
+++ b/src/pages/manifesto/style.scss
@@ -240,13 +240,16 @@
       display: flex;
       flex-direction: column;
       margin-top: 24px;
-      gap: 4px;
+      padding-left: 5px;
+      gap: 3px;
     }
 
     &__item {
       @include base-4;
 
+      display: flex;
       color: #5c6475;
+      gap: 5px;
     }
   }
 
