--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -257,6 +257,7 @@
     background-image: url('../../../assets/svg/landing/video-nfts-cta-background.svg');
     background-position: bottom 0 left 0;
     background-repeat: no-repeat;
+    background-size: 300px;
 
     &__title {
       @include h3;
