--- a/src/pages/community/style.scss
+++ b/src/pages/community/style.scss
@@ -8,7 +8,7 @@
   }
 
   &__hero {
-    @extend %largeContainer;
+    @extend %container;
 
     display: flex;
     gap: 16px;
@@ -17,7 +17,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      max-width: 606px;
+      min-width: 606px;
 
       &__title {
         @include h1;
