Add link to carousel item, add l1media logo, change hover bg color, add translations

--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -211,9 +211,15 @@
           padding: 24px;
           background-color: #111316;
 
+          &:hover {
+            background-color: #1f252e;
+          }
+
           &__logo {
             width: 64px;
             height: 64px;
+            border: 1px solid rgba(163, 195, 242, .19);
+            border-radius: 12px;
           }
 
           &__title {
