--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -203,10 +203,13 @@
       }
 
       &__carousel {
+        display: flex;
+        justify-content: space-between;
         margin-top: 24px;
 
         &__item {
-          width: 288px;
+          display: inline-block;
+          width: 270px;
           height: 288px;
           padding: 24px;
           background-color: #111316;
@@ -215,11 +218,26 @@
             background-color: #1f252e;
           }
 
-          &__logo {
+          &__logo-wrapper {
+            position: relative;
             width: 64px;
             height: 64px;
-            border: 1px solid rgba(163, 195, 242, .19);
-            border-radius: 12px;
+
+            &::before {
+              position: absolute;
+              top: 0;
+              display: block;
+              width: 100%;
+              height: 100%;
+              border-radius: 12px;
+              content: '';
+              box-shadow: inset 0 0 0 1px rgba(163, 195, 242, .19);
+            }
+          }
+
+          &__logo {
+            width: 100%;
+            height: 100%;
           }
 
           &__title {
@@ -507,6 +525,10 @@
         &__carousel {
           max-width: 935px;
           margin: 24px auto 0;
+
+          & > :nth-child(3) {
+            display: none;
+          }
         }
       }
 
@@ -602,6 +624,10 @@
 
         &__carousel {
           max-width: 730px;
+
+          &__item-placeholder {
+            display: none;
+          }
         }
 
         &__info {
