--- a/src/components/index-page/AvailableActivities/style.scss
+++ b/src/components/index-page/AvailableActivities/style.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/main';
+@import '../../../pages/style.scss';
 
 .IndexPage {
   &__available-activities-wrapper {
@@ -69,34 +70,34 @@
 
       &__amount {
         margin-left: auto;
-        padding: 8px 12px;
-        font-family: $font-primary;
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 28px;
-        letter-spacing: 0;
         color: $c_white;
-        background-color: $c_ebony-clay;
 
         &--mobile {
           display: none;
         }
 
-        span {
+        &__value {
           font-family: $font-primary;
-          font-size: 18px;
-          font-weight: 400;
-          line-height: 24px;
+          font-size: 28px;
+          font-weight: 700;
+          line-height: 36px;
           letter-spacing: 0;
+          text-align: right;
         }
 
-        &__dollar-sign {
-          margin-right: 2px;
+        &__currency {
+          @include h7;
+
+          margin-left: 4px;
+          color: #a7aeb7;
         }
 
         &__weekly {
-          margin-left: 8px;
-          color: $c_oslo-gray;
+          @include h8;
+
+          display: block;
+          color: #a7aeb7;
+          text-align: right;
         }
       }
 
@@ -237,11 +238,11 @@
 
       &:hover &__amount {
         color: $c_black;
-        background-color: #e7ebff;
+      }
 
-        span {
-          color: #5c6475;
-        }
+      &:hover &__amount__currency,
+      &:hover &__amount__weekly {
+        color: #5c6475;
       }
 
       &:hover &__place-for-you {
@@ -387,21 +388,26 @@
 
         &__amount {
           display: none;
-          padding: 6px 8px;
-          font-size: 20px;
-          line-height: 28px;
 
           &--mobile {
             display: block;
           }
 
-          span {
-            font-size: 14px;
-            line-height: 25px;
+          &__value {
+            font-family: $font-primary;
+            font-size: 20px;
+            font-weight: 700;
+            line-height: 28px;
+            letter-spacing: 0;
+            text-align: right;
+          }
+
+          &__currency {
+            @include h10;
           }
 
           &__weekly {
-            margin-left: 4px;
+            @include h10;
           }
         }
       }
