--- a/src/pages/community/style.scss
+++ b/src/pages/community/style.scss
@@ -251,4 +251,25 @@
       }
     }
   }
+
+  @media (max-width: 660px) {
+    &__hero-wrapper {
+      padding-bottom: 42px;
+    }
+
+    &__hero {
+      gap: 32px;
+    }
+
+    &__links {
+      margin-top: -80px;
+      gap: 16px;
+      grid-template-columns: repeat(auto-fill, 335px);
+    }
+
+    &__link {
+      width: 335px;
+      height: 156px;
+    }
+  }
 }
