Update icon width and height to 40px on mobile

--- a/src/pages/community/style.scss
+++ b/src/pages/community/style.scss
@@ -270,6 +270,11 @@
     &__link {
       width: 335px;
       height: 156px;
+
+      &__icon {
+        width: 40px;
+        height: 40px;
+      }
     }
   }
 }
