--- a/src/components/index-page/Ecosystem/styles.scss
+++ b/src/components/index-page/Ecosystem/styles.scss
@@ -131,8 +131,26 @@
         &__about {
           max-width: 330px;
 
-          &__gleev-logo {
+          &__logo-wrapper {
+            position: relative;
             width: 72px;
+            height: 72px;
+
+            &::before {
+              position: absolute;
+              top: 0;
+              display: block;
+              width: 100%;
+              height: 100%;
+              border-radius: 12px;
+              content: '';
+              box-shadow: inset 0 0 0 1px rgba(163, 195, 242, .19);
+            }
+          }
+
+          &__logo {
+            width: 100%;
+            height: 100%;
           }
 
           &__section-title {
@@ -196,6 +214,7 @@
             position: absolute;
             bottom: 0;
             width: 100%;
+            height: 100%;
             height: 136px;
             background: linear-gradient(180deg, rgba(17, 19, 22, 0) 0%, #111316 100%);
           }
@@ -600,8 +619,9 @@
           &__about {
             max-width: 260px;
 
-            &__gleev-logo {
+            &__logo-wrapper {
               width: 64px;
+              height: 64px;
             }
 
             &__section-title {
